assets/css/style.css
/* ... */
  .blog-sidebar .sidebar-post .single-sidebar-post {
    margin-top: 25px; }
    .blog-sidebar .sidebar-post .single-sidebar-post .post-thumb a img {
      border-radius: 3px; }
    .blog-sidebar .sidebar-post .single-sidebar-post .post-content {
      padding-left: 20px; }
      .blog-sidebar .sidebar-post .single-sidebar-post .post-content .post-title a {
        line-height: 22px;
        font-size: 15px;
        color: #32333c;
        -webkit-transition: all 0.3s ease-out 0s;
        -moz-transition: all 0.3s ease-out 0s;
        -ms-transition: all 0.3s ease-out 0s;
        -o-transition: all 0.3s ease-out 0s;
        transition: all 0.3s ease-out 0s; }
        @media (max-width: 767px) {
          .blog-sidebar .sidebar-post .single-sidebar-post .post-content .post-title a {
            font-size: 14px; } }
        @media only screen and (min-width: 576px) and (max-width: 767px) {
          .blog-sidebar .sidebar-post .single-sidebar-post .post-content .post-title a {
            font-size: 15px; } }
        .blog-sidebar .sidebar-post .single-sidebar-post .post-content .post-title a:hover {
          color: #274C77; }
      .blog-sidebar .sidebar-post .single-sidebar-post .post-content span {
        color: #8a8fa3;
        font-size: 14px; }
.blog-sidebar .sidebar-category {
  padding: 25px 20px;
  border: 1px solid #ddd;
  border-radius: 5px; }
  .blog-sidebar .sidebar-category ul li a {
    display: block;
    font-size: 16px;
    color: #8a8fa3;
    margin-top: 10px;
    -webkit-transition: all 0.3s ease-out 0s;
    -moz-transition: all 0.3s ease-out 0s;
    -ms-transition: all 0.3s ease-out 0s;
    -o-transition: all 0.3s ease-out 0s;
    transition: all 0.3s ease-out 0s; }
    .blog-sidebar .sidebar-category ul li a span {
      float: right; }
    .blog-sidebar .sidebar-category ul li a:hover {
      color: #274C77; }
.blog-sidebar .sidebar-subscribe {
  padding: 25px 20px;
  border: 1px solid #ddd;
  border-radius: 5px; }
  .blog-sidebar .sidebar-subscribe .subscribe-form {
    position: relative; }
    .blog-sidebar .sidebar-subscribe .subscribe-form input {
      width: 100%;
      height: 50px;
      border: 1px solid #ddd;
      padding: 0 30px;
      border-radius: 50px;
      background-color: #f2f2f2; }
      .blog-sidebar .sidebar-subscribe .subscribe-form input.placeholder {
        opacity: 1;
        color: #8a8fa3; }
      .blog-sidebar .sidebar-subscribe .subscribe-form input:-moz-placeholder {
        opacity: 1;
        color: #8a8fa3; }
      .blog-sidebar .sidebar-subscribe .subscribe-form input::-moz-placeholder {
        opacity: 1;
        color: #8a8fa3; }
      .blog-sidebar .sidebar-subscribe .subscribe-form input::-webkit-input-placeholder {
        opacity: 1;
        color: #8a8fa3; }
      .blog-sidebar .sidebar-subscribe .subscribe-form input:focus {
        border-color: #274C77; }
    .blog-sidebar .sidebar-subscribe .subscribe-form button {
      width: 65px;
      height: 50px;
      text-align: center;
      background-color: #274C77;
      font-size: 20px;
      color: #fff;
      border: 1px solid #274C77;
      border-top-right-radius: 50px;
      border-bottom-right-radius: 50px;
      position: absolute;
      top: 0;
      right: 0;
      line-height: 54px;
      cursor: pointer; }

/* tooltips for work listing */
.tool-tip {
  position: absolute;
  top: 46%;
  bottom: auto;
  left:50%;
  right:auto;
  transform: translate(-50%,-50%);
  margin-top: 10px;
  padding: 7px 17px;
  font-size: 1rem;
  font-weight: 500;
  white-space: nowrap;
  color: #000;
  border-radius: 50px;
  background-color: #fff;
  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1),
    0 5px 15px rgba(0, 0, 0, 0.07);
  height: fit-content;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0;
  transition: all 0.2s ease-in-out;
}

.single-work:hover .tool-tip {
  bottom: 100%;
  opacity: 0.9;
}
.single-work:hover{
  animation: smallJump .5s;
}
#work .left{
  position: absolute;
  left: -45px;
  top: 60%;
  bottom: auto;
  right: auto;
  padding:10px;
}
#work .right{
  position: absolute;
  right: -45px;
  top: 60%;
  bottom: auto;
  left: auto;
  padding:10px;
}
#work .left .fa,#work .right .fa{
  color: #1c2940;
}
#work .left:hover .fa,#work .right:hover .fa{
  animation:smallJump 1s infinite;
}
@media (max-width:1050px){
  #work .left,#work .right{
    display:none;
  }
}
.footer-content p.mt-{
  animation-duration: 2s;
  animation-name: changewidth;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}
/*# sourceMappingURL=style.css.map */

